--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext{
+        version_kotlin = "1.3.61"
+        version_core = "1.2.0"
+        version_constraint_layout = "1.1.3"
+        version_lifecycle_extensions = "2.0.0"
+        version_material = "1.1.0"
+        version_navigation = "2.2.1"
+        version_appcompat = "1.1.0"
+        version_recyclerview = "1.1.0"
+        version_junit = "1.1.1"
+        version_espresso = "3.2.0"
+
+    }
     repositories {
         google()
         jcenter()
@@ -9,7 +21,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
