--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,8 @@ dependencies {
     testImplementation 'junit:junit:4.13'
 
     // lifecycle
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-
+//    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     // Log
     implementation 'com.jakewharton.timber:timber:4.7.1'
 }
