--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 
 buildscript {
     ext{
-        version_kotlin = "1.3.61"
+        version_kotlin = "1.3.71"
+        version_kotlin_coroutines = "1.3.5"
         version_core = "1.2.0"
         version_constraint_layout = "1.1.3"
         version_lifecycle_extensions = "2.0.0"
@@ -12,7 +13,7 @@ buildscript {
         version_recyclerview = "1.1.0"
         version_junit = "1.1.1"
         version_espresso = "3.2.0"
-
+        version_retrofit = "2.8.1"
     }
     repositories {
         google()
