--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,6 @@ dependencies {
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$version_retrofit"
-
+    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.4.0"
 }
