--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
     ext{
-        version_kotlin = "1.3.71"
+        version_kotlin = "1.3.72"
         version_kotlin_coroutines = "1.3.5"
         version_core = "1.2.0"
         version_constraint_layout = "1.1.3"
         version_lifecycle_extensions = "2.0.0"
         version_material = "1.1.0"
-        version_navigation = "2.2.1"
+        version_navigation = "2.2.2"
         version_appcompat = "1.1.0"
         version_recyclerview = "1.1.0"
         version_junit = "1.1.1"
         version_espresso = "3.2.0"
         version_retrofit = "2.8.1"
     }
+
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
