--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
     implementation "com.squareup.okhttp3:logging-interceptor:4.4.0"
+
+    //
+    implementation 'com.github.ar-android:AndroidSvgLoader:1.0.2'
 }
