--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,45 +35,53 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:$version_appcompat"
 
-    // Kotlin
+    //Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$version_kotlin"
 
-    // Kotlin coroutines
+    //Kotlin coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
 
-    // Layout
+    //Layout
     implementation "androidx.constraintlayout:constraintlayout:$version_constraint_layout"
     implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
 
-    // Core
+    //Core
     implementation "androidx.core:core:$version_core"
 
-    // Material Design
+    //Material Design
     implementation "com.google.android.material:material:$version_material"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    // Navigation
+    //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$version_navigation"
     implementation "androidx.navigation:navigation-ui-ktx:$version_navigation"
 
-    // Test
+    //Room
+    implementation "androidx.room:room-runtime:$version_room"
+    kapt "androidx.room:room-compiler:$version_room"
+    androidTestImplementation "androidx.room:room-testing:$version_room"
+
+    //Test
     androidTestImplementation "androidx.test.ext:junit:$version_junit"
     androidTestImplementation "androidx.test.espresso:espresso-core:$version_espresso"
     testImplementation 'junit:junit:4.13'
 
-    // lifecycle
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    //lifecycle
+    implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle"
+    kapt "androidx.lifecycle:lifecycle-compiler:$version_lifecycle"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$version_lifecycle"
 
-    // Log
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    //Log
+    implementation "com.jakewharton.timber:timber:$version_timber"
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.4.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:$version_okhttp"
 
-    //
-    implementation 'com.github.ar-android:AndroidSvgLoader:1.0.2'
+    //SvgLoader
+    implementation "com.github.ar-android:AndroidSvgLoader:$version_svgloader"
 }
