--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,11 @@ buildscript {
 
     ext{
         version_kotlin = "1.3.72"
+        version_room = "2.2.5"
         version_kotlin_coroutines = "1.3.5"
         version_core = "1.2.0"
         version_constraint_layout = "1.1.3"
-        version_lifecycle_extensions = "2.0.0"
+        version_lifecycle = "2.2.0"
         version_material = "1.1.0"
         version_navigation = "2.2.2"
         version_appcompat = "1.1.0"
@@ -15,6 +16,9 @@ buildscript {
         version_junit = "1.1.1"
         version_espresso = "3.2.0"
         version_retrofit = "2.8.1"
+        version_okhttp = "4.4.0"
+        version_timber = "4.7.1"
+        version_svgloader = "1.0.2"
     }
 
     repositories {
