--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
     ext{
         version_kotlin = "1.3.72"
         version_room = "2.2.5"
-        version_kotlin_coroutines = "1.3.5"
-        version_core = "1.2.0"
+        version_kotlin_coroutines = "1.3.6"
+        version_core = '1.3.0'
         version_constraint_layout = "1.1.3"
         version_lifecycle = "2.2.0"
         version_material = "1.1.0"
@@ -15,10 +15,11 @@ buildscript {
         version_recyclerview = "1.1.0"
         version_junit = "1.1.1"
         version_espresso = "3.2.0"
-        version_retrofit = "2.8.1"
-        version_okhttp = "4.4.0"
+        version_retrofit = '2.9.0'
+        version_okhttp = '4.7.2'
         version_timber = "4.7.1"
         version_svgloader = "1.0.2"
+        version_koin = "2.1.6"
     }
 
     repositories {
@@ -28,7 +29,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
         // NOTE: Do not place your application dependencies here; they belong
