--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,13 @@ buildscript {
     ext{
         version_kotlin = "1.3.72"
         version_room = "2.2.5"
-        version_kotlin_coroutines = "1.3.6"
+        version_kotlin_coroutines = "1.3.7"
         version_core = '1.3.0'
         version_constraint_layout = "1.1.3"
         version_lifecycle = "2.2.0"
         version_material = "1.1.0"
         version_navigation = "2.2.2"
-        version_appcompat = "1.1.0"
+        version_appcompat = "1.2.0-rc01"
         version_recyclerview = "1.1.0"
         version_junit = "1.1.1"
         version_espresso = "3.2.0"
